--- a/index.html
+++ b/index.html
@@ -36,25 +36,25 @@
 	   Your browser isn't invited for super fun audio time.
     </audio>
     <div class="balloons text-center" id="b1">
-    	<h2 style="color:#F2B300;">H</h2>
+    	<h2 style="color:#F2B300;">0</h2>
     </div>
     <div class="balloons text-center" id="b2">
-    	<h2 style="color:#0719D4;">B</h2>
+    	<h2 style="color:#0719D4;">3</h2>
     </div>
 	<div class="balloons text-center" id="b3">
-    	<h2 style="color:#D14D39;">D</h2>
+    	<h2 style="color:#D14D39;">T</h2>
     </div>
 	<div class="balloons text-center" id="b4">
-    	<h2 style="color:#8FAD00;">X</h2>
+    	<h2 style="color:#8FAD00;">T</h2>
     </div>
 	<div class="balloons text-center" id="b5">
-    	<h2 style="color:#8377E4;">O</h2>
+    	<h2 style="color:#8377E4;">D</h2>
     </div>
     <div class="balloons text-center" id="b6">
-    	<h2 style="color:#99C96A;">L</h2>
+    	<h2 style="color:#99C96A;">0</h2>
     </div>
     <div class="balloons text-center" id="b7">
-    	<h2 style="color:#20CFB4;">A</h2>
+    	<h2 style="color:#20CFB4;">1</h2>
     </div>
 
     <img src="Balloon-Border.png" width="100%" class="balloon-border">
@@ -104,52 +104,52 @@
 		</div>
 		<div class="row message">
 			<div class="col-md-12">
-				<p>Today is...</p>
-				<p>as beautiful as other days</p>
-				<p>but you realize</p>
+				<p>Happy BirthDay Senorita</p>
+				<p>23 saal ki buddhi ho gayi👵🏻</p>
+				<p>I am sorry babu 🤌🏻🤣</p>
 				<p>another year has gone</p>
 				<p>in a blink of the eyes</p>
 				<p><strong>however</strong></p>
 				<p>Do you know..?</p>
-				<p>today is just special</p>
-				<p>so special to you</p>
-				<p>that's why</p>
+				<p>today is very special</p>
+				<p>so so special </p>
+				<p>Not because its your bday but i was able to keep my secret and that's why</p>
 				<p>Let's make it...</p>
 				<p>the best celebration ever</p>
 				<p>and let me share...</p>
 				<p>a piece of happiness to you</p>
-				<p>I made all this...</p>
-				<p>as a birthday present to you</p>
-				<p>thanks for the friendship we made</p>
-				<p>thanks for everything</p>
-				<p>I wish you all the best</p>
-				<p>May your life be at ease</p>
+				<p>All I can do is Code so</p>
+				<p>here is a birthday present for you👉🏻👈🏻</p>
+				<p>Thanks for the bond we Share</p>
+				<p>Thanks for everything</p>
+				<p>Wishing you all the love and warmth</p>
+				<p>Create a leagacy for your Blood line </p>
 				<p>May all your wishes come true</p>
-				<p>Remember</p>
-				<p>your ambitions</p>
-				<p>you live as a free bird...</p>
+				<p>Dont Forget</p>
+				<p>your ambitions 👉🏻 Business Woman </p>
+				<p>live as a free bird...</p>
 				<p>flying in the blue sky</p>
-				<p>Now things are different...</p>
-				<p>real story of your life</p>
-				<p>is just about to begin</p>
+				<p>Adulting is hard </p>
+				<p>Isnt it ???</p>
 				<p>indeed..</p>
+				<p>Now things are hard...</p>
+				<p>and I know</p>
+				<p>you remain worried for your mom</p>
 				<p>but...</p>
 				<p>don't worry</p>
 				<p>because...</p>
-				<p>God has your back</p>
+				<p>This Idiot has got your back</p>
 				<p>and</p>
-				<p>this year will be better</p>
-				<p>and I hope</p>
-				<p>you'll find...</p>
-				<p>happiness along the way</p>
+				<p>this year will be best year</p>
+				<p>Keep Spreading Hapiness</p>
 				<p>keep your spirit up</p>
-				<p>enjoy every single moment...</p>
-				<p>that you experience today</p>
+				<p>enjoy every single moment... as you always do</p>
+				<p>While you keep doing so much for others</p>
+				<p>Dont forget making yourself feel special once in a while..</p>
 				<p>fill it with your most beautiful smile</p>
-				<p>and make it the best memory..</p>
 				<p>lastly...</p>
-				<p>I'd like to wish you one more time</p>
-				<p>a very happy birthday Sapthesh V</p>
+				<p>Hathi pade tooh toohhh ....</p>
+				<p>a very happy birthday Senorita</p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
